--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
