--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mongodb": "^3.5.9",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
