--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.0", 
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
@@ -29,6 +29,8 @@
   },
   "scripts": {
     "dev-server": "webpack-dev-server",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "client": "webpack-dev-server",
+    "server": "node ./src/server/app.js"
   }
 }
