--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.1",
     "cors": "^2.8.5",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
@@ -20,7 +21,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0", 
+    "react-router-dom": "^5.2.0",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
