--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "author": "Micah Allauca",
   "license": "MIT",
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server": "^2.16.1",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.1",
     "cors": "^2.8.5",
     "css-loader": "^3.6.0",
     "express": "^4.17.1",
+    "graphql": "^15.3.0",
     "jquery": "^3.5.1",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.9.28",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "normalize.css": "^8.0.1",
