Migrated to MongoDB Atlas in preparation for project deployment

--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
+    "start": "nodemon ./src/server/app.js",
     "dev-server": "webpack-dev-server",
     "build": "webpack --mode=production",
     "client": "webpack-dev-server",
-    "server": "nodemon ./src/server/app.js"
+    "server": "node ./src/server/app.js"
   }
 }
