Added heroku-postbuild script to package.json

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dev-server": "webpack-dev-server",
     "build": "webpack --mode=production",
     "client": "webpack-dev-server",
-    "server": "nodemon ./src/server/app.js"
+    "server": "nodemon ./src/server/app.js",
+    "heroku-postbuild": "yarn run build"
   }
 }
