--- a/package.json
+++ b/package.json
@@ -10,29 +10,18 @@
     "yarn": "1.x"
   },
   "dependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.1",
     "cors": "^2.8.5",
-    "css-loader": "^3.6.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.5.9",
-    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "node ./src/server/app.js",
@@ -40,6 +29,19 @@
     "build": "webpack --mode=production",
     "client": "webpack-dev-server",
     "server": "nodemon ./src/server/app.js",
-    "heroku-postbuild": "yarn run build"
+    "heroku-postbuild": "yarn install && yarn build"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
