--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
     "start": "node ./src/server/app.js",
@@ -38,9 +41,6 @@
     "css-loader": "^6.6.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "style-loader": "^3.3.1"
   }
 }
