--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "yarn": "1.x"
   },
   "dependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.1",
     "cors": "^2.8.5",
+    "css-loader": "^6.6.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.5.9",
@@ -22,6 +27,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -34,13 +40,7 @@
     "heroku-postbuild": "yarn install && yarn build"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
     "node-sass": "^7.0.1",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1"
+    "sass-loader": "^12.4.0"
   }
 }
