--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongodb": "^3.5.9",
+    "node-sass": "^7.0.1",
     "nodemon": "^2.0.4",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
@@ -39,8 +41,5 @@
     "server": "nodemon ./src/server/app.js",
     "heroku-postbuild": "yarn install && yarn build"
   },
-  "devDependencies": {
-    "node-sass": "^7.0.1",
-    "sass-loader": "^12.4.0"
-  }
+  "devDependencies": {}
 }
