--- a/server/package.json
+++ b/server/package.json
@@ -9,5 +9,8 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.1"
   },
+  "scripts": {
+    "server": "nodemon ./app.js"
+  },
   "devDependencies": {}
 }
